--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^4.10.1",
     "humps": "^2.0.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +17,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "use-resize-observer": "^6.1.0-alpha.2"
   },
   "scripts": {
     "start": "react-scripts start",
