--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "use-resize-observer": "^6.1.0-alpha.2"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
